--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
+<!DOCTYPE html>
 <html>
-  <head>
-    <title>Git Page</title>
-  </head>
-  <body>
-    <h1> Hello Git</h1>
-    <p>
-      Cool it Man
-    </p>
-  </body>
+<head>
+<title>Title of the document</title>
+</head>
+
+<body>
+The content of the document......
+</body>
+
 </html>
